GMM_Main/src/objects/Director__c.object
<CustomObject>
    <fields>
        <fullName>Director_Id__c</fullName>
        <label>Director Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_Title__c</fullName>
        <label>Director Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Director</label>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Directors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>